# foresight

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.org  annotated.html  app_8hpp_source.html  classes.html  classf7t_1_1_app-members.html  classf7t_1_1_app.html  classf7t_1_1_trie-members.html  classf7t_1_1_trie.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  index.html  main_8hpp_source.html  namespacef7t.html  namespaces.html  structf7t_1_1_trie_node-members.html  structf7t_1_1_trie_node.html  trie_8hpp.html  trie_8hpp_source.html
include/: app.hpp  config.h.in  main.hpp  trie.hpp
search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  classes_1.js  files_0.js  functions_0.js  functions_1.js  functions_4.js  namespaces_0.js  pages_0.js  searchdata.js
src/: app.cpp  main.cpp  trie.cpp
